# datalakeagents

./: .gitignore  README.md  pyproject.toml  requirements-basic.txt  requirements.txt  test_fix.py
config/: settings.yaml
scripts/: generate_sample_data.py  ingest_all_data.py  run_clinical_analyst.py
src/: __init__.py  cli.py
src/agents/: README.md  README_agent_orchestrator.md  README_clinical_analyst.md  README_quality_assessor.md  README_safety_monitor.md  README_statistical_analyzer.md  __init__.py  agent_orchestrator.py  base_agent.py  clinical_analyst.py  quality_assessor.py  safety_monitor.py  statistical_analyzer.py
src/data_lake/: __init__.py  catalog.py  layers.py  storage.py
src/ingestion/: __init__.py  extractors.py  pipeline.py  transformers.py  validators.py
src/meta_layer/: __init__.py  cdisc_standards.py  data_catalog.py  metadata_manager.py  semantic_model.py
src/utils/: __init__.py  config.py  logging.py  validation.py
